[package]
name = "rtcp"
version = "0.1.0"
edition = "2018"
authors = ["Vidar Magnusson <rust@vidarmagnusson.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.3"
colored = "2.2.0"
eyre = "0.6.12"
tun-tap = "0.1.2"
